# Trading_AI_model

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ai_context.md  docker-compose.yml  platform.toml.example  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/: workspace-tips.md
.sessions/: README.md
agent/: cli.py  config.py  types.py  utils.py
company/: README.md
config/: default.yaml
docs/: 00-journey.md  00-overview.md  01-strategy-architecture.md  02-strategies.md  03-htf-context-and-pattern-mechanics.md  04-reaction-engine.md  05-position-sizing-and-risk.md  06-learning-journal.md  07-backtesting.md  08-live-trading-and-deployment.md  09-dashboard.md  10-quant-validation-and-modular-overhaul.md  CHECKPOINT.md  ROADMAP.md  RUNBOOK_demo_launch.md  VM_SCRIPTS.md  answers_W18.md  data_sources.md  decisions.md  deployment.md  deployment_guide.md  exness_setup.md  live_trading.md  pending_tasks.md  performance.md  quickstart.md  reaction_and_learning.md  roadmap.md  session_log.md  status_2026_05_03_evening.md  status_2026_05_03_late.md  strategy_architecture.md  trading_partner.md  voice_roadmap.md
models/: iterate_summary.json  scorer_EURUSD_D1.joblib  scorer_EURUSD_H1_v8.joblib  scorer_EURUSD_LZI_H1_v1.joblib  scorer_EURUSD_M15_v8.joblib
mt5/: README.md  TradingPartner_Overlay.mq5
reports/: dashboard.html  gate.json
scripts/: analyze_losses.py  analyze_walk_forward.py  ask.py  audit_detectors.py  build_dashboard.py  check_claim_register.py  check_gate.py  compile_review_bundle.py  daily_summary.py  deploy_windows.ps1  diagnose_live.py  dogfood_personas.py  download_data.py  evaluate.py  evaluate_alphas.py  explain.py  extract_docx.py  import_backtest_journal.py  import_csv.py  ingest_docx.py  install_git_hooks.py  iterate.py  journal_query.py  retrospective.py  (+33 more)
(+681 files in other folders)
